clang/test/BSC/Negative/Method/Linkage/queue/queue.cbs
// test .hbs header file 
// RUN: %clang %S/queue.hbs -o %t

// test linkage
// RUN: %clang_cc1 -emit-llvm -o - %s | FileCheck %s

#include "queue.hbs"

// CHECK: define dso_local void @struct_queue_isEmpty
void struct queue::isEmpty(struct queue* this) {}
